:rocket: Moved the download leader guide to the top of the page. Had to adjust the spacing to make sure it doesn't get cropped off on mobile.

--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -104,7 +104,7 @@ body {
 
 //this class is used EXCLUSIVELY on the single page.
 .header-height-single {
-  height: 120vh;
+  height: 135vh;
 }
 
 @media screen and (min-width: 40em) {
