--- a/devwp/sass/utilities/_spacing.scss
+++ b/devwp/sass/utilities/_spacing.scss
@@ -91,7 +91,7 @@
 }
 
 .margin-pull-large {
-  margin-top: -50px;
+  margin-top: -40px;
 }
 
 @media screen and (min-width: 64em) {
